# anki-korean

./: .gitignore  .pre-commit-config.yaml  README.md  box_cropper.py  duolingo_parse.py  korean_lesson.apkg  main.py  overview.txt  pyproject.toml
samples/: us_civics_test.py
src/: box_cropper.py  create_deck.py  duolingo_parse.py  reduce_duplicates.py  video_splitter.py
