[project]
name = "anki-korean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "genanki>=0.13.1",
    "opencv-python>=4.12.0.88",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
